--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1 class="center">Welcome#index</h1>
+<p id="index-title">Created By:</p>
+<h2 class="center"><%= my_name %></h2>
